# rag-tutorials

./: .gitignore  pyproject.toml
docs/: Apple.txt  Google.txt  Microsoft.txt  Nvidia.txt  OpenAI.txt
src/: chat.py  config.py  generation_pipeline.py  ingestion_pipeline.py  rag_pipeline.py  retrieval_pipeline.py
