[project]
name = "rag-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
